--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             </div>
             <div id="data">
                 <div id="left">
-                    <h1><span><b>T</b>he King</span><br>of Fast Food</h1>
+                    <h1><span><b>T</b>he King</span></h1>
+                    <h1>of Fast Food</h1>
                     <p>Ullamcorper malesuada proin libero nunc. Id semper risus in hendrerit gravida. Vulputate sapien nec sagittis aliquam malesuada bibendum. </p>
                     <button>view menu</button>
                 </div>
